[package]
name = "image-uploader"
version = "0.1.0"
authors = ["Joe Roland <joroland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
uuid = { version = "0.8", features = ["v4"]}
futures = {version = "=0.3.5", default-features = false}
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
bytes = "0.5.6"
dotenv = "0.15"